--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Preparatory schools -- Juvenile fiction'
 - !lcsh 'Baseball -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Rival Pitchers of Oakdale
 url: http://www.gutenberg.org/ebooks/22948
